[workspace]
members = [
    "eth_test_parser",
    "evm_test_runner",
    "common",
]

[workspace.dependencies]
plonky2_evm = { git = "https://github.com/mir-protocol/plonky2.git", rev = "c0abefdaf55f45fe820502688e442a5b958d1929" }
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", rev = "c0abefdaf55f45fe820502688e442a5b958d1929" }


[profile.release]
lto = "fat"
codegen-units = 1


